Fix organizer statValue align #6732

--- a/src/app/organizer/ItemTable.m.scss
+++ b/src/app/organizer/ItemTable.m.scss
@@ -297,7 +297,6 @@ $modslotSize: 30px;
 
 // The numeric value of the stat
 .statValue {
-  text-align: right !important;
   font-variant-numeric: tabular-nums;
   white-space: nowrap;
   > svg {
